Fix the overflow on hero section

--- a/src/index.css
+++ b/src/index.css
@@ -82,8 +82,8 @@ body {
 .hero-text::before {
   content: "";
   background: radial-gradient(circle at 50% 0%, #6851ff3f 0%, #ffffff 100%);
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   position: absolute;
   filter: blur(100px);
   left: 0;
